Fix blog icons spacing.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1248,18 +1248,19 @@ select {
     }
   }
   .featured-icon-left{
-  margin-top:10px;
+    margin-top:10px;
     i{color:#000;
-    margin-right:10px;
-  font-size:20px;}
-    span{
+    margin-right:5px;
+    font-size:20px;
+  }
+  span{
     color:#b0b0b0;
     margin: 0px !important;
-    }
+  }
   .dropdown-toggle{
   border:unset;
   margin-right: 0px !important;
-  padding: 0px 5px 5px;
+  padding: 0px 0px 5px;
   }  
   .btn-default:hover{
   background:none;  
